# xyz

./: .gitignore  Makefile.toml  ReadMe.md
.github/workflows/: rust.yml
tools/uart_cli/: Cargo.toml  Makefile.toml  ReadMe.md
tools/uart_cli/data/: commands.txt
tools/uart_cli/src/: main.rs  xyz_parser.rs
xyz_robot/: Makefile.toml  ReadMe.md  rust_notes.md
xyz_robot/lls_firmware/: Cargo.toml  Makefile.toml
xyz_robot/lls_firmware/.cargo/: config.toml
xyz_robot/x_firmware/: Cargo.toml  Makefile.toml  build.rs
xyz_robot/x_firmware/.cargo/: config.toml
xyz_robot/xyz_motor/: Cargo.toml  Makefile.toml
xyz_robot/xyz_motor/src/: lib.rs  motor_unit_tests.rs
xyz_robot/xyz_motor/src/components/: mod.rs
xyz_robot/xyz_motor/src/components/xyz_motor/: mod.rs
xyz_robot/xyz_motor/src/components/xyz_motor/mocks/: mod.rs
xyz_robot/xyz_motor/src/components/xyz_motor/powerstep/Common/: Release_Notes.html  motor.h
xyz_robot/xyz_motor/src/components/xyz_motor/powerstep/doc/: X-CUBE-SPN3-HELP.chw
xyz_robot/xyz_motor/src/components/xyz_motor/powerstep/powerSTEP01/: Release_Notes.html  powerstep01.c  powerstep01.h  powerstep01_target_config.h
xyz_robot/xyz_motor/src/mocks/: mod.rs
xyz_robot/xyz_parser/: Cargo.toml  Makefile.toml
xyz_robot/xyz_parser/.cargo/: config.toml
xyz_robot/xyz_parser/diagrams/: xyz_binary_packet.mermaid  xyz_messages.mermaid
xyz_robot/xyz_parser/src/: lib.rs
xyz_robot/xyz_parser/src/components/: mod.rs  receiver.rs  xyz_message.rs  xyz_parser.rs
xyz_robot/xyz_parser/src/components/xyz_message/: mod.rs
xyz_robot/xyz_parser/src/components/xyz_parser/: mod.rs
xyz_robot/yz_firmware/: Cargo.toml  Embed.toml  Makefile.toml  build.rs
xyz_robot/yz_firmware/.cargo/: config.toml
