cargo-features = ["per-package-target"]

[package]
name = "lls_firmware"
version = "0.1.0"
edition = "2024"
autotests = true
autoexamples = true
documentation = "lls_firmware"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
defmt = { version = "1.0.0", optional = true }
defmt-rtt = { version = "1.0.0", features = ["disable-blocking-mode"], optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }    # panic message will be printed via defmt
heapless = { version = "0.9.1", features = ["defmt"], optional = true }
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "time-driver-any", "stm32c071rb", "memory-x", "unstable-pac", "exti", "chrono"], optional = true }
embassy-sync = { version = "0.7.2", features = ["defmt"], optional = true }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"], optional = true }
format_no_std = { version = "1.2.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }

[features]
default = ["embedded"]
embedded = ["cortex-m", "cortex-m-rt", "embassy-executor", "embassy-stm32", "embassy-sync",
    "embassy-time", "embassy-futures", "heapless", "panic-probe", "defmt", "defmt-rtt", "format_no_std"]

[[bin]]
name = "lls_firmware"
test = false
bench = false
harness = false
