[package]
name = "xyz_motor"
version = "0.1.0"
edition = "2024"
documentation = "xyz_motor"
autotests = true

[dependencies]
heapless = { version = "0.9.1" }
log = { version = "0.4.28", optional = true }
defmt = { version = "1.0.1", optional = true }
simple-mermaid = "0.2.0"
embassy-stm32 = { version = "0.4.0", features = ["time-driver-any", "stm32f405rg", "memory-x", "unstable-pac", "exti", "chrono"], optional = true }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768"], optional = true }

[features]
default = ["std"]
embedded = ["defmt", "embassy-stm32", "embassy-time"]
#embedded = ["defmt"]
std = ["log"]
test = ["std"]


